# qa-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  THIRD_PARTY_NOTICES  entrypoint.sh  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_test_order.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py  state.py
backend/app/routers/: products.py  runs.py  suite_runs.py  suites.py  tests.py
backend/app/services/: artifacts.py  runner.py
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: ImportExcelDialog.tsx  ManualTestRunner.tsx  RunArtifactViewer.tsx  RunDetailModal.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  ProductsPage.tsx  ReportsPage.tsx  RunsPage.tsx  SuitesPage.tsx  TestsPage.tsx
