[project]
name = "starter-react-fastapi-backend"
version = "0.1.0"
description = "FastAPI backend for React + FastAPI starter"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "python-dotenv>=1.1.1",
  "browser-use>=0.5.12",
  "langchain-openai>=1.1.10",
  "langchain-anthropic>=1.3.4",
  "langchain-google-genai>=4.2.1",
  "sqlalchemy>=2.0.36,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "pydantic-settings>=2.0.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
